fix  modal to show parts after loading them to not have flicker effects

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -145,3 +145,9 @@
 img{
   width: 500px;
 }
+
+.loading-content {
+  padding: 2rem;
+  text-align: center;
+  font-size: 1.2rem;
+}
